--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js" // Updated to run nodemon directly
+    "dev": "nodemon index.js" 
   },
   "keywords": [],
   "author": "",
